2017-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCglobl.h,
	  src/SDCCmain.c:
	  Remove leftovers from deprectaed nojtbound pragma and option.
	* doc/sdccman.lyx:
	  Update list of incompatible changes.
	* src/hc08/gen.c,
	  src/SDCCast.c,
	  device/lib/_rlulonglong.c,
	  device/lib/_rrslonglong.c,
	  device/lib/_rrulonglong.c,
	  support/regression/tests/*.c:
	  Fixed many long long issues, including bugs #2658 and #2118.

2017-01-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c,
	  support/regression/tests/bug-2643.c:
	  Fix bug #2643.

2017-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/ds390/gen.c,
	  src/ds390/ralloc.c,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/tests/*.c:
	  Fixes in ds390 long long support.

2017-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/ds390/ralloc.c,
	  support/regression/tests/*.c:
	  Fix conflict in assignment of long long return values.

2017-01-04 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de.de>

	* device/include/stdint.h,
	  src/SDCCsymt.c,
	  src/ds390/gen.c,
	  src/ds390/gen.h,
	  src/ds390/ralloc.c,
	  support/regression/tests/*.c:
	  Initial long long support for ds390.

2018-01-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/scripts/sdcc.nsi: added tlcs90 library

2017-12-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/scripts/sdcc.nsi: added sdastlcs90.exe

2017-12-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/wchar.c: disabled test for gcc 5.4 and older
	* support/scripts/sdcc.nsi: added huge library

2017-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/cmd.src/clean.mk:
	  Cleanup bison-generated files.

2017-12-28 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/cmd.src/Makefile.in,
	  sim/ucsim/cmd.src/cmdpars.cc,
	  sim/ucsim/cmd.src/cmdpars.hh,
	  device/lib/pic14/*,
	  device/lib/pic16/*:
	  Fixes for out-of-tree builds.
